# todoread

./: CMakeLists.txt  index.html  params.json  todoread.desktop  todoread.pro
bb/: AboutPage.qml  BrowserPage.qml  ConfigPage.qml  ListPage.qml  main.qml
cmake/: blackberry-toolchain.cmake
harmattan/: AboutPage.qml  BrowserPage.qml  ConfigPage.qml  ReadModel.qml
qml/: Browser.qml  BrowserPage.qml  ConfigPage.qml  ListItem.qml  ListPage.qml  LoginDialog.qml  ReadModel.js  ReadModel.qml  main.qml
qtc_packaging/debian_harmattan/: README  changelog  control  copyright  manifest.aegis  rules  todoread.aegis
readitlater/: readitlater.pro  readitlater.provider  readitlater.service  readitlaterprovider.cpp  readitlaterprovider.h
readitlaterprovider/: readitlater.provider  readitlaterprovider.cpp  readitlaterprovider.h  readitlaterprovider.pro
readitlaterservice/: readitlater.service  readitlaterauth.cpp  readitlaterauth.h  readitlaterpost.cpp  readitlaterpost.h  readitlaterservice.cpp  readitlaterservice.h  readitlaterservice.pro
src/: CMakeLists.txt  bar-descriptor.xml.in  bb-debug.sh.in  bbreadmodel.cpp  bbreadmodel.h  controller.cpp  controller.h  downloadthread.cpp  downloadthread.h  globals.h  identitymanager.cpp  identitymanager.h  main.cpp  readdatasource.cpp  readdatasource.h  readitlater.cpp  readitlater.h  src.pro  todoread.cpp  todoread.h  todoreaditem.cpp  todoreaditem.h  todoreadmodel.cpp  todoreadmodel.h
src/qmlapplicationviewer/: qmlapplicationviewer.cpp
test/: CMakeLists.txt  test.cpp  test.h  test.pro  testmodel.cpp  testmodel.h  testpocket.cpp  testpocket.h
